Java Stream and Intermediate Native SQL Query complete example